# app100

./: README.md  SECURITY_DESIGN.md  WORKFLOW.md  app-detail.html  diagonal_fix.js  index.html  robots.txt  script.js  styles.css  test_diagonal_movement.js
.claude/: settings.local.json
.serena/cache/typescript/: document_symbols_cache_v23-06-25.pkl
.serena/memories/: 007-3doors-logic-maze-progress.md  coding_standards.md  completion_checklist.md  project_overview.md  session_2025-08-11_summary.md  suggested_commands.md
001-number-learning/: index.html
003-memory-game/: index.html
20250826_TimeTree-System/: .env.example  .gitignore  README.md  config.yaml  pyproject.toml  test.txt  timetree_sow .md
20250826_TimeTree-System/docs/: final_design_critical_review.md  final_design_verification.md  revised_system_design_mvp.md  timetree_exporter_integrated_design.md
20250826_TimeTree-System/docs/work-reports/: timetree_sow_analysis_report_20250826.md  work_report_20250827.md
20250826_TimeTree-System/src/timetree_notifier/: __init__.py  main.py
20250826_TimeTree-System/src/timetree_notifier/config/: __init__.py  settings.py
20250826_TimeTree-System/src/timetree_notifier/core/: __init__.py  daily_notifier.py  models.py  scheduler.py
20250826_TimeTree-System/src/timetree_notifier/utils/: __init__.py  logger.py
app/002-animal-food-matching/: index.html  script.js
app/003-memory-game/: index.html  script.js  style.css
app/004-vehicle-puzzle/: index.html
app100/: CRITICAL_GAPS_DESIGN.md  GOAL_CHECK.md  TOMORROW_HANDOVER.md  WORKFLOW.md  index.html  test_diagonal.html  test_maze_patterns.js
app100/.claude/: settings.local.json
app100/app100/tools/: README.md  add-app-simple.js  add-app.js
app100/apps/006-math-adventure/: index.html  script.js  style.css
app100/apps/007-3doors-logic-maze/: game.js
app100/docs/: sow_orekuna_quiz.md
app100/portfolio/: index.html  script.js  styles.css
tools/linux-quest-test/day1-minigame/: style.css
tools/linux-quest-test/day2-minigame/: script.js  style.css
tools/linux-quest-test/day3-minigame/: script.js  style.css
tools/linux-quest-test/day4-minigame/: script.js  style.css
tools/linux-quest-test/day5-minigame/: script.js  style.css
tools/linux-quest-test/day6-minigame/: script.js  style.css
tools/linux-quest-test/day7-minigame/: script.js  style.css
